--- a/book.html
+++ b/book.html
@@ -608,7 +608,7 @@
     width: auto;
     padding: 10px;
     display: inline-block;
-    margin: 5px;
+    margin: 10px;
     margin-left: 20px;
     float: right;
     font-weight: 400; 
@@ -1470,7 +1470,11 @@
   }
   
   .infobox p,
-  .linkbox p {
+  .infobox ol,
+  .infobox ul,
+  .linkbox p,
+  .linkbox ol,
+  .linkbox ul {
     font-size: 17px;
     font-weight: 700;
     font-family: 'Roboto Condensed', sans-serif;
